# python-generic-script-executor-api

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml  publish.yml
.github/workflows /: ci.yml
app/: main.py
app/core/settings/: app.py  base.py  development.py  production.py  test.py
app/endpoint/: executor.py  python_scripts.py  status.py
app/model/: security_user.py
app/route/: api.py
app/schema/: eval_command.py  exec_command.py
app/security/: role_checker.py  security_config.py
app/service/: exec_service.py
