[tool.poetry]
name = "python-generic-script-executor-api"
version = "0.0.1"
description = ""
authors = ["Senol Atac"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
gunicorn = "^23.0.0"
pytest = "^8.3.2"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.6"
coverage = "^7.6.1"
pydantic-settings = "^2.4.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
